# bts7960_driver

./: .clang-format  .gitignore  README.md  meson.build
bts7960/: bts7960.c  bts7960.h  bts7960_hal.h
bts7960/hal/: mock.c  mock.h
bts7960/hal-impls/: mock.c
subprojects/: .gitignore  cpputest.wrap
tests/: meson.build  mock_driver_test.cpp
